set inline code text color to ensure contrast

--- a/src/global.scss
+++ b/src/global.scss
@@ -299,6 +299,7 @@ $pendIconMarg: #{$baseUnit}px;
     display: inline;
     padding: 0 0.4em;
     font-size: 85%;
+    color: var(--black);
     background-color: var(--codeInlineBackground);
     border-radius: 4px;
   }
